--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -11,6 +11,7 @@
   height: 400px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 20px;
 }
 
@@ -19,4 +20,9 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+
+.imgLoading{
+  width: 200px;
+  padding-top: 30px;
 }
